--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <tr>
               <th scope="col">#</th>
               <th scope="col">
-                First Name <i class="fa fa-sort pull-right"></i>
+                First Name <i id="arrow" class="fa fa-sort pull-right"></i>
               </th>
               <th scope="col">Last Name</th>
               <th scope="col">BVN</th>
