--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
               <th scope="col">Last Name</th>
               <th scope="col">BVN</th>
               <th scope="col">
-                Account Opened At <i class="fa fa-sort pull-right"></i>
+                Account Opened At
+                <i id="open" class="fa fa-sort pull-right"></i>
               </th>
               <th scope="col">Avaliable Balance</th>
               <th scope="col">Status</th>
