--- a/index.html
+++ b/index.html
@@ -61,7 +61,15 @@
             <tr>
               <th scope="col">#</th>
               <th scope="col">
-                First Name <i id="arrow" class="fa fa-sort pull-right"></i>
+                First Name
+                <i
+                  id="ascending"
+                  class="fa fa-sort-asc pull-right text-success"
+                ></i>
+                <i
+                  id="descending"
+                  class="fa fa-sort-desc pull-right d-none text-danger"
+                ></i>
               </th>
               <th scope="col">Last Name</th>
               <th scope="col">BVN</th>
