--- a/index.html
+++ b/index.html
@@ -75,7 +75,14 @@
               <th scope="col">BVN</th>
               <th scope="col">
                 Account Opened At
-                <i id="open" class="fa fa-sort pull-right"></i>
+                <i
+                  id="ascend"
+                  class="fa fa-sort-asc pull-right text-success"
+                ></i>
+                <i
+                  id="descend"
+                  class="fa fa-sort-desc pull-right d-none text-danger"
+                ></i>
               </th>
               <th scope="col">Avaliable Balance</th>
               <th scope="col">Status</th>
